Restructure to separate roles and playbooks

--- a/playbooks/luan-vim.yml
+++ b/playbooks/luan-vim.yml
@@ -1,31 +1,13 @@
 ---
-- hosts: mac-dev
+- name: luan-vim
+  hosts: all
   vars:
     vimfiles_path: "{{ ansible_env.HOME }}/.vim"
-    git:
-
   tasks:
-    - name: install chrome
-      homebrew_cask:
-        name: google-chrome
-
-    - name: install iterm2
-      homebrew_cask:
-        name: iterm2
-
-    - name: install dropbox
-      homebrew_cask:
-        name: dropbox
-
     - name: install vim
       homebrew:
         name: vim
         install_options: with-lua
-
-    - name: install gnu-tar
-      homebrew:
-        name: gnu-tar
-        install_options: with-default-names
 
     - name: download laun-vim repo
       git:
@@ -77,35 +59,3 @@
       shell: "ALL_PLUGINS='true' vim +'PlugClean!' +'PlugUpdate!' +'qall!' > /dev/null"
       args:
         creates: "{{ vimfiles_path }}/plugged"
-
-    - name: git_username_prompt
-      pause:
-        prompt: "Please specify git username: [{{ ansible_user_gecos }}]"
-        private: no
-      register: git_username_prompt
-      when: git.username is undefined
-
-    - name: git_email_prompt
-      pause:
-        prompt: "Please specify git email: [{{ ansible_user_id + '@' + ansible_fqdn }}]"
-        private: no
-      register: git_email_prompt
-      when: git.email is undefined
-
-    - name: set git.email var
-      set_fact:
-        git:
-          username: "{{ git_username_prompt.user_input|default(ansible_user_gecos, true) }}"
-          email: "{{ git_email_prompt.user_input|default(ansible_user_id + '@' + ansible_fqdn, true) }}"
-      when:
-        - git_email_prompt is defined and git.email is undefined
-        - git_username_prompt is defined and git.username is undefined
-
-    - name: ~/.gitconfig
-      template:
-        src: gitconfig
-        dest: "{{ ansible_env.HOME }}/.gitconfig"
-        mode: 0644
-      vars:
-        username: "{{ git.username }}"
-        email: "{{ git.email }}"
