Move gitconfig to git role

--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: ~/.gitconfig
   template:
-    src: gitconfig
+    src: files/gitconfig
     dest: "{{ ansible_env.HOME }}/.gitconfig"
     mode: 0644
   vars:
