--- a/playbooks/mac-dev.yml
+++ b/playbooks/mac-dev.yml
@@ -24,6 +24,9 @@
     - include_role:
         name: git
 
+    - include_role:
+        name: powerline
+
     - name: copy ~/.bashrc
       copy:
         src: bashrc
