fix powerline after python upgrade to 3.7

--- a/roles/powerline/tasks/main.yml
+++ b/roles/powerline/tasks/main.yml
@@ -5,6 +5,12 @@
     executable: /usr/local/bin/pip3
     extra_args: --user
 
+- name: install powerline git status
+  pip:
+    name: powerline-gitstatus
+    executable: /usr/local/bin/pip3
+    extra_args: --user
+
 - name: ~/.profile.d/powerline.profile
   copy:
     content: |
